# os_labs

./: .gitignore  README.md
labs/lab1/: CMakeLists.txt
labs/lab1/scripts/: update_and_build.sh
labs/lab2/: CMakeLists.txt
labs/lab2/include/: background_launcher.h
labs/lab2/src/: background_launcher.cpp
labs/lab2/test/: test.cpp
labs/lab3/: CMakeLists.txt  README.md
labs/lab3/application/: application.cpp  application.hpp
labs/lab3/logger/: logger.cpp  logger.hpp
labs/lab3/shared/: shared_memory.hpp
labs/lab3/shared/shared_counter/: shared_counter.cpp  shared_counter.hpp
labs/lab3/shared/shared_data/: shared_data.cpp  shared_data.hpp
labs/lab3/test/: test.cpp
labs/lab4/: CMakeLists.txt  error.txt
labs/lab4/common/: common.cpp  common.h
labs/lab4/logs_custom_time/: daily_average_202511.txt  hourly_average_20251123.txt  raw_temperature_20251123_171314.txt  raw_temperature_20251123_171839.txt
labs/lab4/logs_ultrafast/: daily_average_202511.txt  hourly_average_20251123.txt  raw_temperature_20251123_190824.txt
labs/lab4/my_serial/: my_serial.cpp  my_serial.hpp
labs/lab4/scripts/: create_port.sh  create_ports.sh  remove_ports.sh  update_and_build.cmd
labs/lab4/serial_emulation/: serial_emulation.cpp  serial_emulation.h
labs/lab4/serial_port_wrapper/: serial_port_wrapper.cpp  serial_port_wrapper.h
labs/lab4/temperature_emulation/: temperature_emulation.cpp  temperature_emulation.h  temperature_emulation_factory.cpp
labs/lab4/temperature_monitor/: temperature_monitor.cpp  temperature_monitor.h
labs/lab4/test/: test.cpp
labs/lab5/: CMakeLists.txt  debug.html
labs/lab5/T/: ntd.cpp
labs/lab5/common/: common.cpp  common.h
labs/lab5/database/: database.cpp  database.h
labs/lab5/http_server/: http_server.cpp  http_server.h  template.html
labs/lab5/network_collector/: network_collector.cpp  network_collector.h
labs/lab5/network_publisher/: network_publisher.cpp  network_publisher.h
labs/lab5/scripts/: launch.cmd  ubl.sh
labs/lab5/temperature_emulation/: temperature_emulation.cpp  temperature_emulation.h
labs/lab5/temperature_monitor/: temperature_monitor.cpp  temperature_monitor.h
labs/lab5/test/: test.cpp
labs/lab5/time_manager/: time_manager.h
labs/lab6/: CMakeLists.txt  TemperatureMonitorGUI.exe.manifest  error.txt
labs/lab6/data/: temperature_data.db-journal
labs/lab6/gui/: gui.cpp  gui.h  gui_linux.cpp  gui_linux.h
labs/lab6/http_server/: http_server.cpp  http_server.h  template.html
labs/lab6/scripts/: launch.sh
labs/lab6/temperature_emulation/: temperature_emulation.h
labs/lab6/temperature_monitor/: temperature_monitor.cpp  temperature_monitor.h
labs/lab6/test/: test.cpp  test_gui.cpp  test_gui_linux.cpp
labs/lab6/time_manager/: time_manager.cpp
